@@ -3228,11 +3228,20 @@ void Mob::TryApplyEffect(Mob *target, uint32 spell_id)
 void Mob::TryTriggerOnValueAmount(bool IsHP, bool IsMana, bool IsEndur, bool IsPet)
 {
 	/*
+	At present time there is no obvious difference between ReqTarget and ReqCaster
+	ReqTarget is typically used in spells cast on a target where the trigger occurs on that target.
+	ReqCaster is typically self only spells where the triggers on self.
+	Regardless both trigger on the owner of the buff.
+	*/
+
+	/*
+	Base2 Range: 1004	 = Below < 80% HP
 	Base2 Range: 500-520 = Below (base2 - 500)*5 HP
 	Base2 Range: 521	 = Below (?) Mana UKNOWN - Will assume its 20% unless proven otherwise
 	Base2 Range: 522	 = Below (40%) Endurance
 	Base2 Range: 523	 = Below (40%) Mana
 	Base2 Range: 220-?	 = Number of pets on hatelist to trigger (base2 - 220) (Set at 30 pets max for now)
+	38311 = < 10% mana;
 	*/
 
 	if (!spellbonuses.TriggerOnValueAmount)
@@ -3250,21 +3259,25 @@ void Mob::TryTriggerOnValueAmount(bool IsHP, bool IsMana, bool IsEndur, bool IsP
 
 				for(int i = 0; i < EFFECT_COUNT; i++){
 
-					if (spells[spell_id].effectid[i] == SE_TriggerOnValueAmount){
+					if ((spells[spell_id].effectid[i] == SE_TriggerOnReqTarget) || (spells[spell_id].effectid[i] == SE_TriggerOnReqCaster)) {
 
 						int base2 = spells[spell_id].base2[i];
 						bool use_spell = false;
 
 						if (IsHP){
-							if ((base2 >= 500 && base2 <= 520) && GetHPRatio() < (base2 - 500)*5){
+							if ((base2 >= 500 && base2 <= 520) && GetHPRatio() < (base2 - 500)*5)
 								use_spell = true;
-							}
+		
+							else if (base2 = 1004 && GetHPRatio() < 80)
+								use_spell = true;
 						}
 
 						else if (IsMana){
-							if ( (base2 = 521 && GetManaRatio() < 20) || (base2 = 523 && GetManaRatio() < 40)) {
+							if ( (base2 = 521 && GetManaRatio() < 20) || (base2 = 523 && GetManaRatio() < 40)) 
 								use_spell = true;
-							}
+							
+							else if (base2 = 38311 && GetManaRatio() < 10)
+								use_spell = true;
 						}
 
 						else if (IsEndur){
@@ -3282,10 +3295,6 @@ void Mob::TryTriggerOnValueAmount(bool IsHP, bool IsMana, bool IsEndur, bool IsP
 
 						if (use_spell){
 							SpellFinished(spells[spell_id].base[i], this, 10, 0, -1, spells[spell_id].ResistDiff);
-							
-							/*Note, spell data shows numhits values of 0 or 1, however many descriptions of these spells indicate they should
-							be fading when consumed even with numhits of 0 (It makes sense they should fade...).
-							Unless proven otherwise, they should fade when triggered. */
 							
 							if(!TryFadeEffect(e))
 								BuffFadeBySlot(e);
